# gitsage

./: .gitignore  README.md  pyproject.toml
gitsage/: cli.py  client.py  mcp_server.py  prompts.py  safety.py
ollama/: Modelfile
scripts/: setup.sh  test_api.py
