[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gitsage"
version = "0.1.0"
description = "Fully local Git workflow assistant powered by Ollama + SmolLM2"
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

dependencies = []

[project.scripts]
gitsage = "gitsage.cli:main"
gitsage-mcp = "gitsage.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitsage*"]
